--- a/src/App.css
+++ b/src/App.css
@@ -1,49 +1,55 @@
-.App {
-  text-align: center;
+body {
+  margin: 0;
 }
-
-.App-logo {
-  height: 40vmin;
+#myThreeJsCanvas {
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: -3;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#text {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#menu-title {
+  color: white;
+  text-align: center;
 }
 
-.container-main {
-  position: relative;
-  height: 100vh;
-  width: 100vw;
+#accord {
+  margin: 20;
+  width: 13%;
+  position: fixed;
+  background: rgba(25, 25, 25, 0.5);
+  border: 1px solid rgba(45, 45, 45, 0.8);
+  border-bottom: 0;
+  border-radius: 2px;
 }
 
-.menu {
-  margin: 0;
-  list-style-type: none;
+#function-buttons {
+  margin-right: 20;
+  width: 20%;
+  float: right;
+  background: rgba(25, 25, 25, 0.5);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#accordion-content {
+  background-color: rgba(25, 25, 25, 0.5);
+}
+
+#accord-item {
+  background-color: rgba(25, 25, 25, 0.5);
+}
+
+#accordion-header {
+  background-color: rgba(25, 25, 25, 0.5);
+}
+
+#accord-text {
+  color: white;
 }
