--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
   position: fixed;
   left: 0;
   top: 0;
-  z-index: -3;
+  z-index: -1;
   pointer-events: none;
 }
 
@@ -32,10 +32,9 @@ body {
 }
 
 #function-buttons {
-  margin-right: 20;
+  margin: 0;
   width: 20%;
   float: right;
-  background: rgba(25, 25, 25, 0.5);
 }
 
 #accordion-content {
@@ -52,4 +51,17 @@ body {
 
 #accord-text {
   color: white;
+}
+
+.global-class-name {
+  color: #b0c9cf;
+}
+
+.back-button {
+  background-color: rgba(25, 25, 25, 0.5);
+  border-radius: 10px;
+}
+
+.container {
+  margin-top: 10;
 }
